# math-quiz

./: .gitignore  LICENSE  README.md  pyproject.toml
math_quiz/: __init__.py  __main__.py  math_quiz.py
tests/: test_math_quiz.py
